<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/enter_title" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/type_edittext"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:ems="10"
        android:hint="@string/enter_desc"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="5" >
    </EditText>

    <EditText
        android:id="@+id/category_edittext"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="5" />

    <EditText
        android:id="@+id/objective_edittext"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:ems="10"
        android:hint="@string/objective"
        android:inputType="textMultiLine|textCapSentences"
        android:layout_marginBottom="20dp"
        android:minLines="5" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_type"
        android:hint="@string/spinner_hint"
        android:layout_gravity="center_horizontal"
        android:prompt="@string/spinner_hint" />

    <Button
        android:id="@+id/add_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_record" />

</LinearLayout>