<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textMultiLine|textCapSentences"
        android:ems="10"
        android:hint="@string/enter_title" />

    <EditText
        android:id="@+id/type_edittext"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:ems="10"
        android:hint="@string/enter_desc"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="5" >
    </EditText>


    <EditText
        android:id="@+id/category_edittext"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="5"
         />

    <EditText
        android:id="@+id/objective_edittext"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:ems="10"
        android:hint="@string/objective"
        android:inputType="textMultiLine|textCapSentences"
        android:layout_marginBottom="20dp"
        android:minLines="5" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_type" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_delete" />
    </LinearLayout>

</LinearLayout>